<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"

        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="PROFILE" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputName"
            android:layout_marginTop="@dimen/signup_text_margin_top">




            <EditText
                android:id="@+id/txtupcusname"
                style="@style/modifiedEditText"
                android:hint="@string/login_name_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"

            >

            <EditText

                android:id="@+id/txtupcusemail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputMob"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText

                android:id="@+id/txtupcuscontact"
                style="@style/modifiedEditText"
                android:hint="@string/login_ocn_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputPassword"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText

                android:id="@+id/txtupcuspassword"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:visibility="gone"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnupcusregister"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="#03A9F4"

            android:text="Update"
            app:backgroundTint="#03A9F4" />

    </LinearLayout>

</FrameLayout>