<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrescriptionsFragment">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"

        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Requests" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputName"
            android:layout_marginTop="@dimen/signup_text_margin_top">




            <EditText
                android:id="@+id/txtrqcusname"
                style="@style/modifiedEditText"
                android:hint="@string/login_name_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"

            >

            <EditText

                android:id="@+id/txtrqcusemail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputMob"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText

                android:id="@+id/txtrqcuscontact"
                style="@style/modifiedEditText"
                android:hint="@string/login_ocn_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/textInputMobb"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText

                android:id="@+id/txtusrequest"
                style="@style/modifiedEditText"
                android:layout_height="109dp"
                android:hint="Request"
                android:inputType="textEmailAddress"

                android:maxLines="5" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_height="13dp"
            android:layout_marginTop="@dimen/signup_text_margin_top">


            <EditText

                android:id="@+id/txtupcuspassword"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnreqsend"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"


            android:background="@color/white"
            android:text="Send"
            app:backgroundTint="#2196F3" />

    </LinearLayout>
</LinearLayout>