<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginActivity">

    <ImageView
        android:id="@+id/prod_view_image"
        android:layout_width="181dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo"


       />

    <LinearLayout
        style="@style/linearParent"

        android:layout_height="433dp"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">


        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/txtcuslogusername"
                style="@style/modifiedEditText"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/txtcuslogPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"

            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="#00BCD4"

            android:text="Login"
            app:backgroundTint="#03A9F4" />

        <TextView
            android:id="@+id/TvLink"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center_horizontal"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            tools:ignore="OnClick" />


    </LinearLayout>

</LinearLayout>